--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -8,6 +8,199 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Raleway;
+    scroll-behavior: smooth;
+}
+
+body {
+    background-color: #1D1D1D;
+    color: white;
+    height: 1200px;
 }
 
 /*Style général end*/
+
+/*NAVBAR START*/
+
+nav {
+    justify-content: center;
+    list-style: none;
+  }
+
+.navbar {
+display: flex;
+align-items: center;
+background-color: #343434;
+height: 70px;
+padding-left: 25px;
+}
+
+.navbar > img {
+    height: 70px;
+}
+
+#menu {
+    position: fixed;
+    top: -100%;
+    left: 0;
+    transition: top 1s ease-in-out;
+    background-color: #1D1D1D;
+    height: 100%;
+    width: 100%;
+    text-align: center;
+    z-index: 3;
+  }
+  
+#menu.visible {
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    background-color: #1D1D1D;
+    height: 100%;
+    width: 100%;
+    text-align: center;
+    z-index: 3;
+    transition: top 1s ease-in-out;
+}
+
+#menu-toggle-btn{
+    position: fixed ;
+    z-index: 4;
+    right: 20px;
+    top: 10px;
+    border: none;
+    background-color: rgba(255, 255, 255, 0);
+    cursor: pointer;
+}
+
+/* styles pour l'effet de hover sur les éléments de classe ".line" */
+#menu-toggle-btn:hover .line {
+  transition: 0.5s ease-in-out;
+  transform-origin: center;
+  animation: rotate 4s ease-in-out;
+  animation-iteration-count: infinite;
+}
+
+.line {
+    fill: none;
+    stroke: rgb(219, 219, 219);
+    stroke-width: 6;
+    transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
+      stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .line1 {
+    stroke-dasharray: 60 207;
+    stroke-width: 6;
+  }
+  .line2 {
+    stroke-dasharray: 60 60;
+    stroke-width: 6;
+  }
+  .line3 {
+    stroke-dasharray: 60 207;
+    stroke-width: 6;
+  }
+  .opened .line1 {
+    stroke-dasharray: 90 207;
+    stroke-dashoffset: -134;
+    stroke-width: 6;
+  }
+  .opened .line2 {
+    stroke-dasharray: 1 60;
+    stroke-dashoffset: -30;
+    stroke-width: 6;
+  }
+  .opened .line3 {
+    stroke-dasharray: 90 207;
+    stroke-dashoffset: -134;
+    stroke-width: 6;
+  }
+
+
+  .onglet {
+    text-decoration: none;
+    color: rgb(158, 158, 158);
+    font-size: 2.5rem;
+    font-weight: 900;
+    display: block;
+    margin-top: 0.5rem;
+    padding: 1rem;
+    z-index: 5;
+}
+
+.information-menu-footer {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    border-top: 2px solid #A7A7A7;
+    width: 80%;
+    margin: 20px auto;
+}
+
+.item-information-menu-footer {
+    margin: 20px 30px;
+    display: flex;
+}
+
+.item-information-menu-footer > img {
+    height: 25px;
+    margin-right: 10px;
+}
+
+.item-information-menu-footer > a {
+    text-decoration: none;
+    color: white;
+}
+/*NAVBAR END*/
+
+
+
+/*FOOTER START*/
+
+footer{
+    background-color: #343434;
+    padding: 20px 30px 0 30px;
+    display: flex;
+    flex-direction: column;
+}
+
+.footer-items-container{
+    display: flex;
+    margin-bottom: 20px;
+}
+
+.footer-item {
+    display: flex;
+    flex-direction: column;
+}
+
+.credentials {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 15px 0;
+    border-top: 2px solid #A7A7A7;
+}
+
+.credentials > a {
+    text-decoration: none;
+    color: white;
+    margin: 0 10px;
+}
+/*FOOTER END*/
+
+
+/*HOME START*/
+
+.home-slide {
+    position: relative;
+    background-color: red;
+    margin-bottom: 30px;
+    height: 100vh;
+}
+
+.heading-slide > h2 {
+    font-family: Corben;
+    font-size: 5rem;
+}
+/*HOME END*/
