--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -17,6 +17,21 @@ body {
     height: fit-content;
 }
 
+.body-service{
+    height: 100vh;
+    overflow-y: hidden;
+}
+
+.white-btn-blue > a {
+    color: white;
+    text-decoration: none;
+}
+
+.white-btn-red > a {
+    color: white;
+    text-decoration: none;
+}
+
 .white-btn-blue {
     cursor: pointer;
     background-color: #1c5a8400;
@@ -48,9 +63,45 @@ body {
 }
 
 .white-btn-red:hover {
-    background-color: #CC1320;
+    background-color: #851A20;
     color: white;
-    border: 3px solid #CC1320;
+    border: 3px solid #851A20;
+}
+
+.alt-white-btn-red {
+    cursor: pointer;
+    background-color: #1c5a8400;
+    color: white;
+    padding: 10px 30px;
+    font-size: 1.1rem;
+    font-weight: bold;
+    border-radius: 50px;
+    border: 3px solid white;
+    transition: all 0.3s ease-in-out;
+}
+
+.alt-white-btn-red:hover {
+    background-color: white;
+    color: #851A20;
+    border: 3px solid white;
+}
+
+.alt-white-btn-blue {
+    cursor: pointer;
+    background-color: #1c5a8400;
+    color: white;
+    padding: 10px 30px;
+    font-size: 1.1rem;
+    font-weight: bold;
+    border-radius: 50px;
+    border: 3px solid white;
+    transition: all 0.3s ease-in-out;
+}
+
+.alt-white-btn-blue:hover {
+    background-color: white;
+    color: #1C5B84;
+    border: 3px solid white;
 }
 
 
@@ -74,7 +125,7 @@ body {
 
 .main-btn-red {
     cursor: pointer;
-    background-color: #CC1320;
+    background-color: #851A20;
     color: white;
     padding: 10px 30px;
     font-size: 1.1rem;
@@ -86,8 +137,8 @@ body {
 
 .main-btn-red:hover {
     background-color: white;
-    color: #CC1320;
-    border: 3px solid #CC1320;
+    color: #851A20;
+    border: 3px solid #851A20;
 }
 
 /*Style général end*/
@@ -101,7 +152,7 @@ nav {
 
 .navbar {
     position: fixed;
-    z-index: 4;
+    z-index: 11;
     display: flex;
     align-items: center;
     background-color: #34343400;
@@ -123,7 +174,7 @@ nav {
     height: 100%;
     width: 100%;
     text-align: center;
-    z-index: 3;
+    z-index: 8;
   }
   
 #menu.visible {
@@ -135,13 +186,13 @@ nav {
     height: 100%;
     width: 100%;
     text-align: center;
-    z-index: 3;
+    z-index: 8;
     transition: top 1s ease-in-out;
 }
 
 #menu-toggle-btn{
     position: fixed ;
-    z-index: 4;
+    z-index: 9;
     right: 20px;
     top: 10px;
     border: none;
@@ -268,11 +319,50 @@ footer{
 
 /*HOME START*/
 
-.home-first-slide {
+
+
+.carousel-container {
+    display: flex;
+    overflow-x: hidden;
+    scroll-snap-type: x mandatory;
+  }
+  
+  .home-first-slide, .home-slide {
+    flex: 0 0 100%;
+    scroll-snap-align: start;
+  }
+  
+  .carousel-control {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: pointer;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    font-size: 20px;
+    z-index: 10;
+  }
+  
+  .prev {
+    left: 10px;
+  }
+  
+  .next {
+    right: 10px;
+  }
+  
+  .carousel-container {
     position: relative;
-    height: 100vh;
-    width: 100%;
-}
+  }
+  
+  .home-first-slide, .home-slide {
+    transition: transform 0.9s ease-in-out; 
+  }
+
+
+
 
 video {
     width: 100%;
@@ -306,7 +396,7 @@ video {
 }
 
 .heading-first-slide > h2 > span{
-    color: #CC1320;
+    color: #851A20;
 }
 
 .heading-first-slide > p {
@@ -390,7 +480,7 @@ video {
     width: 30%;
     margin: auto;
     height: 3px;
-    background-color: #CC1320;
+    background-color: #851A20;
     border: none;
 }
 
@@ -404,8 +494,117 @@ video {
 
 /*SERVICES START*/
 
+.page-title {
+    padding: 60px 0;
+}
 
-.carousel-container {
+.page-title > h1 {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.service-info {
+    padding: 0 10%;
+}
+
+.service-info > h3 {
+    margin: 20px 0 ;
+}
+
+.service-info > p {
+    margin-bottom: 20px;
+}
+
+
+.service-nav {
+    position: fixed;
+    z-index: 3;
+    width: 100%;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #1B1B1B;
+    padding: 0 60px;
+    display: flex;
+    justify-content: center;
+    border-radius: 50px 50px 0 0;
+}
+
+.service-nav-item-red {
+    background: #1B1B1B;
+    background: linear-gradient(180deg, #1B1B1B, #851A2200);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 20%;
+    transition: all 0.3s ease-in-out;
+}
+
+
+.service-nav-item-red > a {
+    padding: 8px 20px;
+    text-align: center;
+    color: white;
+    text-decoration: none;
+    width: 100%;
+}
+
+.service-nav-item-red:hover {
+    background-color: #851A20;
+}
+
+.active-red {
+    background-color: #851A20;
+}
+
+.service-nav-item-red > a > img{
+    height: 20px;
+}
+
+.service-nav-item-red > a > h4{
+    font-weight: 400;
+}
+
+
+.service-nav-item-blue {
+    background: #1B1B1B;
+    background: linear-gradient(180deg, #1B1B1B, #851A2200);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 20%;
+    transition: all 0.3s ease-in-out;
+}
+
+
+.service-nav-item-blue > a {
+    padding: 8px 20px;
+    text-align: center;
+    color: white;
+    text-decoration: none;
+    width: 100%;
+}
+
+.service-nav-item-blue:hover {
+    background-color: #1C5B84;
+}
+
+.active-blue {
+    background-color: #1C5B84;
+}
+
+.service-nav-item-blue > a > img{
+    height: 20px;
+}
+
+.service-nav-item-blue > a > h4{
+    font-weight: 400;
+}
+
+
+.carousel-services-container {
     height: 100vh;
     display: grid;
     place-items: center;
@@ -417,8 +616,8 @@ main {
     width: 100%;
     height: 100%;
     box-shadow: 0 3px 10px rgba(0,0,0,0.3);
-  }
-  
+}
+
   .item {
     width: 300px;
     height: 400px;
@@ -432,6 +631,7 @@ main {
     border-radius: 20px;
     box-shadow: 0 20px 30px rgba(255,255,255,0.3) inset;
     transition: transform 0.1s, left 0.75s, top 0.75s, width 0.75s, height 0.75s;
+    cursor: pointer;
   
     &:nth-child(1), &:nth-child(2) {
       left: 0;
@@ -486,33 +686,10 @@ main {
       filter: blur(0);
     }
   }
-  
-  .nav {
-    position: absolute;
-    bottom: 2rem;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 2;
-    user-select: none;
-  
-    & .btn {
-        border: 3px solid white;
-      background-color: rgba(255,255,255,0.5);
-      color: white;
-      margin: 0 0.25rem;
-      padding: 0.75rem;
-      border-radius: 50%;
-      cursor: pointer;
-      font-size: 3rem;
-  
-      &:hover {
-        background-color: rgba(255,255,255,0.3);
-      }
-    }
-  }
+
 
   
-  /* @media (width > 650px) and (width < 900px) {
+  @media (width > 650px) and (width < 900px) {
     .content {
       & .title        { font-size: 1rem; }
       & .description  { font-size: 0.7rem; }
@@ -544,5 +721,294 @@ main {
       &:nth-child(5) { left: calc(50% + 280px); }
       &:nth-child(6) { left: calc(50% + 420px); opacity: 0; }
     }
-  } */
+  } 
+
+
+
+/*AUDIOVISUEL START*/
+
+
+
+
+.espaceur{
+    height: 18vh;
+}
+
+.espaceur-before-full-width-container {
+    height: 10vh;
+}
+
+.red-container {
+    background-color: #851A20;
+    padding: 30px;
+    position: relative;
+    min-height: 50vh;
+}
+
+
+
+.service-content-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.service-content-img {
+    width: 40%;
+    min-width: 450px;
+    max-width: 480px;
+    margin: 0 20px;
+    position: relative;
+    height: fit-content;
+}
+
+.service-content-img > img {
+    width: 100%;
+}
+
+.fade-img-left-red {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: #851A21;
+    background: linear-gradient(90deg, #851A21, #851A2200);
+    width: 10%;
+    height: 100%;
+}
+
+.fade-img-right-red {
+    position: absolute;
+    top: 0;
+    right: 0;
+    background: #851A21;
+    background: linear-gradient(-90deg, #851A21, #851A2200);
+    width: 10%;
+    height: 100%;
+}
+
+.fade-container-red {
+    position: absolute;
+    z-index: 1;
+    bottom: -20%;
+    right: 0;
+    background: #851A21;
+    background: linear-gradient(180deg, #851A21, #851A2200);
+    width: 100%;
+    height: 20%;
+}
+
+.service-content-text {
+    width: 50%;
+    min-width: 350px;
+}
+
+.service-content-text > h3 {
+    font-size: 1.3rem;
+    margin-bottom: 30px;
+}
+
+.service-content-text > .btn-right {
+    position: absolute;
+    z-index: 2;
+    bottom: -40px;
+    left: 0;
+    margin-left: 70%;
+    transform: translateX(-70%);
+}
+
+.service-content-text > .btn-left {
+    position: absolute;
+    bottom: -40px;
+    left: 0;
+    margin-left: 25%;
+    transform: translateX(-25%);
+}
+
+
+.black-container {
+    padding: 30px;
+    position: relative;
+    min-height: 50vh;
+}
+
+.fade-img-left-black {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: #1D1D1D;
+    background: linear-gradient(90deg, #1D1D1D, #1D1D1D00);
+    width: 10%;
+    height: 100%;
+}
+
+.fade-img-right-black {
+    position: absolute;
+    top: 0;
+    right: 0;
+    background: #1D1D1D;
+    background: linear-gradient(-90deg, #1D1D1D, #1D1D1D00);
+    width: 10%;
+    height: 100%;
+}
+
+
+
+.red-container-full-width {
+    position: relative;
+    width: 100%;
+    height: 70vh;
+    background-image: url('../IMG/Images/audio-visuel_storytelling.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.fade-container-black {
+    position: absolute;
+    z-index: 0;
+    bottom: 0;
+    right: 0;
+    background: #1D1D1D;
+    background: linear-gradient(0deg, #1D1D1D, #1D1D1D00);
+    width: 100%;
+    height: 40%;
+}
+
+.overlay-full-width-red {
+    background: #851A21;
+    background: linear-gradient(-90deg, #851A21, #851a2100);
+    height: 100%;
+    width: 90%;
+    float: right;
+}
+
+.overlay-full-width-red > .service-content-text {
+    position: relative;
+    z-index: 1;
+    margin: 50px 0 0 450px;
+}
+
+.overlay-full-width-red > .service-content-text > button {
+    margin-top: 80px;
+    margin-left: 50%;
+    transform: translateX(-50%);
+}
+
+
+.audiovisuel-black-container-full-width {
+    position: relative;
+    width: 100%;
+    height: 70vh;
+    background-image: url('../IMG/Images/audio-visuel_communication.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.web-black-container-full-width {
+    position: relative;
+    width: 100%;
+    height: 70vh;
+    background-image: url('../IMG/Images/devweb-design.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.overlay-full-width-black {
+    background: #1D1D1D;
+    background: linear-gradient(90deg, #1D1D1D, #1d1d1d3b);
+    height: 100%;
+    width: 100%;
+    float: left;
+}
+
+.overlay-full-width-black > .service-content-text {
+    position: relative;
+    z-index: 1;
+    margin: 50px 450px 0 0;
+}
+
+.overlay-full-width-black > .service-content-text > button {
+    margin-top: 80px;
+    margin-left: 50%;
+    transform: translateX(-50%);
+}
+/*AUDIOVISUEL END*/
+
+/*WEB START*/
+
+
+.blue-container {
+    background-color: #1C5B84;
+    padding: 30px;
+    position: relative;
+    min-height: 50vh;
+}
+
+
+.fade-img-right-blue {
+    position: absolute;
+    top: 0;
+    right: 0;
+    background: #1C5B84;
+    background: linear-gradient(-90deg, #1C5B84, #1C5B8400);
+    width: 10%;
+    height: 100%;
+}
+
+.fade-img-left-blue {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: #1C5B84;
+    background: linear-gradient(90deg, #1C5B84, #1C5B8400);
+    width: 10%;
+    height: 100%;
+}
+
+.fade-container-blue {
+    position: absolute;
+    z-index: 1;
+    bottom: -20%;
+    right: 0;
+    background: #1C5B84;
+    background: linear-gradient(180deg, #1C5B84, #1C5B8400);
+    width: 100%;
+    height: 20%;
+}
+
+
+.blue-container-full-width {
+    position: relative;
+    width: 100%;
+    height: 70vh;
+    background-image: url('../IMG/Images/developpementWeb.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.overlay-full-width-blue {
+    background: #1C5B84;
+    background: linear-gradient(-90deg, #1C5B84, #1C5B8400);
+    height: 100%;
+    width: 90%;
+    float: right;
+}
+
+.overlay-full-width-blue > .service-content-text {
+    position: relative;
+    z-index: 1;
+    margin: 50px 0 0 450px;
+}
+
+.overlay-full-width-blue > .service-content-text > button {
+    margin-top: 80px;
+    margin-left: 50%;
+    transform: translateX(-50%);
+}
+
+
+/*WEB END*/
+
+
 /*SERVICES END*/
+
+
