--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -218,8 +218,6 @@ nav {
 #menu-toggle-btn:hover .line {
   transition: 0.5s ease-in-out;
   transform-origin: center;
-  animation: rotate 4s ease-in-out;
-  animation-iteration-count: infinite;
 }
 
 .line {
@@ -343,20 +341,70 @@ footer{
   }
 
 .carousel-counter {
-    background-color: red;
     display: flex;
     position: fixed;
     z-index: 4;
-    bottom: 10%;
+    bottom: 4%;
     left: 50%;
     transform: translateX(-50%);
 }
 
 .carousel-counter-item {
-    padding: 0 20px;
     font-size: 3rem;
+    margin: 0px;
+    position: relative;
 }
-  
+
+.carousel-counter-item > input{
+    cursor: pointer;
+    position: absolute;
+    z-index: 5;
+    top: 3.5px;
+    left: 3px;
+    width:  1rem;
+    height: 1rem;
+    opacity: 0;
+}
+
+
+
+.timer-container {
+    width:  40px;
+    height: 40px;
+    position: relative;
+}
+
+.timer-bar {
+    width:  1.4rem;
+    height: 1.4rem;
+    border-radius: 50%;
+    display: inline-block;
+    border-top: 2px solid rgba(255, 255, 255, 0.6);
+    border-right: 3px solid transparent;
+    box-sizing: border-box;
+    animation: rotate 4s linear infinite;
+}
+
+.dot-slider {
+    width:  0.5rem;
+    height: 0.5rem;
+    position: absolute;
+    top: 7px;
+    left: 7px;
+    background-color: rgba(255, 255, 255, 0.4);
+    border-radius: 50%;
+    opacity: 0.8;
+}
+
+@keyframes rotate {
+    0% {
+        transform: rotate(-60deg);
+    }
+    100% {
+        transform: rotate(300deg);
+    }
+}
+
   .home-first-slide, .home-slide {
     flex: 0 0 100%;
     scroll-snap-align: start;
@@ -364,23 +412,35 @@ footer{
   
   .carousel-control {
     position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
+    border-radius: 100%;
+    bottom: 0;
     cursor: pointer;
-    background-color: rgba(0, 0, 0, 0.5);
-    color: white;
-    border: none;
+    background-color: rgba(255, 255, 255, 0);
+    border: 2px solid rgba(255, 255, 255, 0);
+    color: rgba(255, 255, 255, 0.5);
     padding: 10px 15px;
     font-size: 20px;
     z-index: 4;
+    transition:  all 0.3s ease-in-out;
+    height: 50px;
+    width: 50px;
+  }
+
+  .carousel-control:hover {
+    border-radius: 100%;
+    border: 2px solid rgba(255, 255, 255, 0.1);
+    background-color: rgba(255, 255, 255, 0.1);
+    color: rgba(255, 255, 255, 1);
   }
   
   .prev {
-    left: 10px;
+    left: 39.5%;
+    bottom: 4%;
   }
   
   .next {
-    right: 10px;
+    right: 39.3%;
+    bottom: 4%;
   }
   
   .carousel-container {
